Symbolic Coordinates LFA dark mode fix

--- a/More/Logfile Analyzer Styling Data.css
+++ b/More/Logfile Analyzer Styling Data.css
@@ -3972,6 +3972,13 @@ rect.rgb-quiz { stroke: black; }
 	img.symbolic-password-solution {
 		border: 1px solid red;
 	}
+	.dark-mode img.symbolic-password {
+		filter: invert(87%);
+	}
+
+	.dark-mode img.symbolic-password-solution {
+		border: 1px solid cyan;
+	}
 /* Synapse Cipher */
 	table.synapse-cipher-key {
 		margin: 2mm 0;
